--- a/about.css
+++ b/about.css
@@ -1,47 +1,3 @@
-body{
-    margin:0px;
-    padding:0px;
-}
-body{
-    margin:0;
-    padding:0;
-    font-family: 'Roboto', sans-serif;
-
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  font:inherit;
-}
-
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
-}
-
-
-html:focus-within {
-  scroll-behavior: smooth;
-}
-
-html, body {
-  height: 100%;
-  font-family: var(--ff-primary);
-}
-
-body {
- 
-  /*8text-rendering: optimizeSpeed;*/
-  line-height: 1.5;
-}
-
 *,
 *::before,
 *::after {
@@ -159,15 +115,15 @@ width:96%;
     font-size: 1.8rem;
     font-weight: 400;
     font-family: 'Lato',sans-serif;
-    /* Apply styles for the second set of labels if needed */
+   
 }
 input[type="checkbox"] {
   appearance: auto;
-  border: 1px solid #000; /* Set border for the checkbox */
-  width: 1.8rem; /* Set your desired width */
-  height: 1.8rem; /* Set your desired height */
+  border: 1px solid #000; 
+  width: 1.8rem;
+  height: 1.8rem; 
   position: relative;
-    bottom: 3.2rem;/* You can add more styling properties as needed */
+    bottom: 3.2rem;
 }
 .third-set .form-label {
   color: white;
@@ -176,7 +132,7 @@ input[type="checkbox"] {
     font-size: 1.8rem;
     font-weight: 400;
     font-family: 'Lato',sans-serif;
-    /* Apply styles for the second set of labels if needed */
+    
 }
 #book{
   background: #FBC336;
@@ -187,16 +143,16 @@ input[type="checkbox"] {
     height: 4.5rem;
     font-size:1.6rem;
     font-weight: 450;
-    /* Apply styles for the "NEXT" button if needed */
+   
 }
 
 input[type="checkbox"] {
   appearance: auto;
-  border: 1px solid #000; /* Set border for the checkbox */
-  width: 1.8rem; /* Set your desired width */
-  height: 1.8rem; /* Set your desired height */
+  border: 1px solid #000; 
+  width: 1.8rem; 
+  height: 1.8rem; 
   position: relative;
-    bottom: 3.2rem;/* You can add more styling properties as needed */
+    bottom: 3.2rem;
 }
 
 #next {
@@ -208,13 +164,19 @@ input[type="checkbox"] {
     height: 4.5rem;
     font-size:1.6rem;
     font-weight: 450;
-    /* Apply styles for the "NEXT" button if needed */
+    
 }
 
 .close-btn {
-  display: block;
-  margin-top: 10px;
+  position: absolute;
+  top: 0.4rem; 
+  right: 2rem; 
+  font-size: 2rem;
+  background: none;
+  border: none;
   cursor: pointer;
+  color: #fff; 
+  outline: none;
 }
 
 @keyframes tick-animation {
@@ -251,6 +213,9 @@ input[type="checkbox"] {
  margin: 4vh auto;
  animation: tick-animation 0.5s ease-in-out forwards;
 }
+
+
+
 
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
@@ -292,6 +257,8 @@ input[type="checkbox"] {
   font-size: 1.75rem;
   font-weight: 500;
   background-color: white;
+  width:100vw;
+
 }
 
 .primary-navigation ul {
@@ -446,15 +413,12 @@ color: white;}
     margin: 0 1rem;
     padding: 0.5rem 1rem;
   }
-  .booking:hover
-{background-color: #4EAF4E;
-color: white;}
+  .booking:hover{
+  background-color: #4EAF4E;
+  color: white;
+  }
 }
-main {
-  padding-top: 2rem; /* Default padding value for larger screens */
 
-
-}
 .container1 {
   width: 100%;
   max-width: 100vw; /* Set a maximum width for larger screens */
