--- a/home.css
+++ b/home.css
@@ -115,15 +115,15 @@ width:96%;
     font-size: 1.8rem;
     font-weight: 400;
     font-family: 'Lato',sans-serif;
-    /* Apply styles for the second set of labels if needed */
+   
 }
 input[type="checkbox"] {
   appearance: auto;
-  border: 1px solid #000; /* Set border for the checkbox */
-  width: 1.8rem; /* Set your desired width */
-  height: 1.8rem; /* Set your desired height */
+  border: 1px solid #000; 
+  width: 1.8rem;
+  height: 1.8rem; 
   position: relative;
-    bottom: 3.2rem;/* You can add more styling properties as needed */
+    bottom: 3.2rem;
 }
 .third-set .form-label {
   color: white;
@@ -132,7 +132,7 @@ input[type="checkbox"] {
     font-size: 1.8rem;
     font-weight: 400;
     font-family: 'Lato',sans-serif;
-    /* Apply styles for the second set of labels if needed */
+    
 }
 #book{
   background: #FBC336;
@@ -143,16 +143,16 @@ input[type="checkbox"] {
     height: 4.5rem;
     font-size:1.6rem;
     font-weight: 450;
-    /* Apply styles for the "NEXT" button if needed */
+   
 }
 
 input[type="checkbox"] {
   appearance: auto;
-  border: 1px solid #000; /* Set border for the checkbox */
-  width: 1.8rem; /* Set your desired width */
-  height: 1.8rem; /* Set your desired height */
+  border: 1px solid #000; 
+  width: 1.8rem; 
+  height: 1.8rem; 
   position: relative;
-    bottom: 3.2rem;/* You can add more styling properties as needed */
+    bottom: 3.2rem;
 }
 
 #next {
@@ -164,13 +164,19 @@ input[type="checkbox"] {
     height: 4.5rem;
     font-size:1.6rem;
     font-weight: 450;
-    /* Apply styles for the "NEXT" button if needed */
+    
 }
 
 .close-btn {
-  display: block;
-  margin-top: 10px;
+  position: absolute;
+  top: 0.4rem; 
+  right: 2rem; 
+  font-size: 2rem;
+  background: none;
+  border: none;
   cursor: pointer;
+  color: #fff; 
+  outline: none;
 }
 
 @keyframes tick-animation {
@@ -209,179 +215,6 @@ input[type="checkbox"] {
 }
 
 
-/* }
-.form{
-    display: none;
-    position: fixed;
-    top: 43vh;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    justify-content: center;
-    align-items: center;
-  }
-  .close-btn {
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-  }
-.form-background{
-    width: 500px;
-    height:730px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.form-content{
-    width:404px;
-    height:556px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    position:relative;
-    bottom: 673px;
-}
-.form h2{
-    color: #FBC336;
-text-align: center;
-font-family: 'Poppins', sans-serif;
-font-size: 30px;
-font-style: normal;
-font-weight: 600;
-line-height: 140%; 
-position: relative;
-    bottom: 690px;
-    right: 24px;
-}
-.form-content p{
-    color: #FFF;
-text-align: center;
-font-family: 'Lato', sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 140%;
-position: relative;
-right: 51px;
-}
-.name{
-    color: #FFF;
-font-family: 'Lato', sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 160%;
-position: relative;
-right: 117px;
-}
-.email{
-    color: #FFF;
-font-family: 'Lato', sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 160%;
-position: relative;
-right: 116px;
-}
-.phone{
-    color: #FFF;
-font-family: 'Lato', sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 160%;
-position: relative;
-right: 80px;
-}
-.city{
-    color: #FFF;
-font-family: 'Lato', sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 160%;
-position: relative;
-right: 67px;
-}
-#fname{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
-border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
-}
-#email{
-    display: flex;
-    width: 406px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
-border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
-position: relative;
-left: 52px;
-}
-#phone{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
-border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 20px;
-}
-#city{
-    display: flex;
-width: 300px;
-height: 50px;
-padding: 15px 23px;
-align-items: flex-start;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 42px;
-border: 2px solid #FFF;
-background-color: unset;
-margin-bottom: 35px;
-}
-.next{
-    display: flex;
-padding: 11px 43px 12px 43px;
-justify-content: center;
-align-items: center;
-border-radius: 42px;
-background: #FBC336;
-color: #181818;
-font-family: 'Lato', sans-serif;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 160%;
-position: relative;
-right: 80px;
-}
-.next:hover{
-    background-color: #4EAF4E;
-    color: white; */
 
 
 @media (prefers-reduced-motion: reduce) {
