--- a/USA.css
+++ b/USA.css
@@ -862,11 +862,16 @@ color: white;}
       
   }
   
-  
+  @media (min-width: 770px) and (max-width: 1200px){
+    .footer-row {
+      flex-direction: column;
+      align-items: flex-start; 
+    }
+  }
   
   @media (max-width:768px) {
     .footer-row {
-      flex-direction: column; /* Stack columns vertically */
+      flex-direction: column; 
     }
   
     .agency-top {
@@ -914,5 +919,3 @@ color: white;}
     }
     
   }
-  
-  
