--- a/about.css
+++ b/about.css
@@ -861,11 +861,16 @@ color: white;}
     
 }
 
-
+@media (min-width: 770px) and (max-width: 1200px){
+  .footer-row {
+    flex-direction: column;
+    align-items: flex-start; 
+  }
+}
 
 @media (max-width:768px) {
   .footer-row {
-    flex-direction: column; /* Stack columns vertically */
+    flex-direction: column; 
   }
 
   .agency-top {
@@ -913,4 +918,3 @@ color: white;}
   }
   
 }
-
