--- a/home.css
+++ b/home.css
@@ -435,7 +435,7 @@ color: white;}
   .overseas{
     display:inline-flex;
     flex-direction:column;
-    gap:1em;
+    gap:0.6rem;
     margin-top: 180px;
     width:58vw;
     font-family: "Poppins", sans-serif;
@@ -445,7 +445,7 @@ color: white;}
     display:flex;
     align-self: flex-end;
     justify-content: flex-end;
-    margin-top:8em;
+    margin-top:12em;
     width: 72%;
     height: auto;
     margin-right: 0;
@@ -464,9 +464,10 @@ color: white;}
 }
 .matter1{
 
-  font-size:1.95rem;
+  font-size:1.55rem;
   color:black;
-  font-weight: 400;
+  font-weight: 500;
+  font-family: 'Avenir', sans-serif;
   line-height: 1.6;
   text-transform:none;
   width: 70%;
@@ -483,14 +484,14 @@ font-weight: 375;
 justify-content:center;
 align-items: center;
 border:none;
+margin-bottom:9rem;
 }
 .btn1:hover{
-  color:#7FBA3A;
-  background-color: white;
-  border: 2px solid #7FBA3A;
+  color:white;
+  background-color: #FFCC4A;
 }
 
-.universities {
+/*.universities {
   position: relative;
   display: flex;
   overflow: hidden;
@@ -498,8 +499,18 @@ border:none;
   padding: 1em 0;
   margin-top: -95px;
   background-color:white;
+}*/
+.universities{
+position: relative;
+display: flex;
+overflow: hidden;
+white-space: nowrap;
+padding: 0.5rem;
+margin-top: 0.6rem;
+background-color: white;
+height:15.5rem;
+bottom:9rem;
 }
-
 .universities img {
   height:5em;
   margin: 2.5em;
@@ -551,7 +562,7 @@ border:none;
 .ABOUT{
   display:inline-flex;
     flex-direction:column;
-    gap:3rem;
+    gap:1.5rem;
     position:relative; 
     width:60vw;
     height:auto;
@@ -565,7 +576,8 @@ border:none;
 .matter2{
   font-size:2.25rem;
   color:#595566;
-  font-weight: 300;
+  font-weight: 400;
+  font-family:'Lato',sans-serif;
   line-height:3rem;
   text-transform:none;
   width:90%;
@@ -580,15 +592,15 @@ border:none;
   display: inline-block;
   max-width:30%;
 font-size: 20px;
-font-weight: 400;
+font-family:'Poppins,sans-serif' ;
+font-weight: 500;
 justify-content:center;
 align-items: center;
 border:none;
 }
 .btn2:hover{
-  color:#7FBA3A;
-  background-color: white;
-  border: 2px solid #7FBA3A;
+  color:white;
+  background-color: #FFCC4A;
 }
 .AU{
   position:relative;
@@ -601,7 +613,7 @@ border:none;
   width: 100vw;
   height: auto;
   font-family: "Poppins", sans-serif;
-  padding: 1vh 5vw;
+  padding: 5vh 5vw;
   display: flex;
   flex-direction: column;
   justify-content: center; 
@@ -612,6 +624,7 @@ border:none;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: stretch; 
+  padding-left: 6rem;
 
 }
 
@@ -647,6 +660,8 @@ border:none;
   color: #fff;
   text-align: left;
   padding-left: 3rem !important;
+  font-family: 'Cabin', sans-serif;
+  font-weight:bold;
   padding: 0.5rem 0; 
   mix-blend-mode: screen; 
   font-size: 3rem;
@@ -677,8 +692,8 @@ border:none;
     height: auto;
     font-family: "Poppins", sans-serif;
     padding-top: 20vh;
-    padding-left: 8vw;
-    padding-right: 8vw;
+    padding-left: 6vw;
+    padding-right: 7vw;
     display: flex;
   flex-direction: column;
   justify-content: center;
@@ -715,13 +730,16 @@ display: flex;
   color: #595959;
   font-size: 1.12rem;
   font-weight: 400;
+  font-family: 'Lato', sans-serif;
 }
 .test-card img {
   margin-top: 2rem;
   width:10%;
   height: auto; 
 }
-
+.col-md-4 a:hover{
+  text-decoration: none;
+}
 .container5{
   background: #FFF;
     width: 100vw;
@@ -743,16 +761,20 @@ display: flex;
   width: 95%;
   height: auto;
 }
-
+.container5 .title{
+  margin-bottom:0rem;
+}
 .odd{
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 0.875rem;
 }
 .odd p {
   font-size: 2.5rem;
   color: #595566;
   line-height: 4rem;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
 }
 .odd li{
   font-size: 2.5rem;
@@ -760,6 +782,7 @@ display: flex;
   line-height: 5rem;
   color: #595566;
   font-weight: 400;
+  font-family: 'Lato', sans-serif;
 }
 .odd li img{
   align-self: center;
@@ -777,7 +800,9 @@ padding-left: 1rem;
   display: inline-block; 
   max-width: 80%;
   margin-bottom: 0;
-  font-weight: 300;
+  font-weight: 400;
+  font-family:'Lato', sans-serif;
+  letter-spacing: 0.145rem;
 }
 .btn3{
   display:flex;
@@ -788,15 +813,17 @@ padding-left: 1rem;
   display: inline-block;
 max-width:50%;
 font-size: 20px;
-font-weight: 400;
+font-weight: 500;
 justify-content:center;
 align-items: center;
 border:none;
+margin-top: 1rem;
+font-family:'Poppins',sans-serif ;
+
 }
 .btn3:hover{
-  color:#181818;
-  background-color: white;
-  border: 2px solid #7FBA3A;
+  background-color: #FFCC4A;
+  color: white;
 }
 .container6 {
   background: #F5F5F5;
@@ -865,7 +892,7 @@ border:none;
   background: linear-gradient(225deg, #4EAF4E 0%, #4EAF4E 100%);
 }
 
-.timeline ol li:nth-child(even) div {
+/*.timeline ol li:nth-child(even) div {
   position: absolute;
   left: calc(50% + 7px); 
   transform: translateX(-50%); 
@@ -877,13 +904,40 @@ border:none;
   background: white;
   border-radius: 9px;
   border: 1px solid #959595;
-}
-.timeline ol li:nth-child(odd) div {
+}*/
+/*.timeline ol li:nth-child(odd) div {
   position: absolute;
   transform: translateX(-50%); 
   width: 100%;
   padding: 15px;
   font-size: 1.5rem;
+  white-space: normal;
+  color: black;
+  background: white;
+  border-radius: 9px;
+  border: 1px solid #959595;
+}*/
+.timeline ol li:nth-child(even) div {
+  position: absolute;
+  left: calc(50% + 7px); 
+  transform: translateX(-50%); 
+  width: 24.75rem;
+  height:16.75rem;
+  padding: 13px;
+  font-size: 1.1rem;
+  white-space: normal;
+  color: black;
+  background: white;
+  border-radius: 9px;
+  border: 1px solid #959595;
+}
+.timeline ol li:nth-child(odd) div {
+  position: absolute;
+  transform: translateX(-50%); 
+  width: 24.75rem;
+  height:16.75rem;
+  padding: 13px;
+  font-size: 1.1rem;
   white-space: normal;
   color: black;
   background: white;
@@ -928,7 +982,7 @@ border:none;
   font-weight: 200;
  
 }
-.timeline .time-card p{
+.timeline .time-card .time-cardcontent1{
 font-size: 1.75rem;
 font-weight: 500;
 color: #1A202C
@@ -936,6 +990,14 @@ color: #1A202C
 }
 .timeline .time-card span{
   color: #FFBA40;
+  font-family:'Inter',sans-serif;
+  font-weight: bold;
+
+  }
+  .timeline .time-card .test-cardcontent2{
+    color: var(--Gray-gray-600, #718096);
+font-family: 'Lato', sans-serif;
+font-weight: 400;
   }
 
 
@@ -1318,13 +1380,13 @@ padding: 1rem;
 
   .overseas {
       width: 100%; 
-      margin-top: 1em;
       align-items: center; 
+      gap:0.6rem;
   }
 
   
   .title1 {
-      font-size: 1.5em; 
+      font-size: 2.125rem; 
       text-align: center; 
       padding-top: 100px;
   }
@@ -1352,11 +1414,18 @@ padding: 1rem;
   .opening {
       max-width: 100%;
       height: auto; 
-
+  }
 
   .universities {
-      margin-top: 1em; 
-      justify-content: center; 
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 1em 0;
+    margin-top: 0.6rem;
+    background-color: white;
+    height: 10.5rem;
+    top: -2rem;
   }
 
   .universities img {
@@ -1364,7 +1433,7 @@ padding: 1rem;
       margin: 1em;
   }
 }
-}
+
 
 @media (max-width: 768px) {
   
@@ -1391,9 +1460,10 @@ padding: 1rem;
 
 
   .matter2 {
-    font-size: 1em; 
+    font-size: 2.25rem; 
     padding: 0 1em; 
     text-align: center;
+    font-family: 'Lato', sans-serif;
 }
 
   
@@ -1412,6 +1482,8 @@ padding: 1rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    font-family:'Poppins,sans-serif' ;
+    font-weight: 500;
 }
 }
 
@@ -1431,7 +1503,9 @@ padding: 1rem;
   .col-md-4 {
     max-width: 100%; /* Set the maximum width to 100% for single-column layout */
   }
-
+.col-md-4 a:hover{
+  text-decoration: none;
+}
   .test-card h3 {
     font-size: 2rem;
     
@@ -1440,7 +1514,8 @@ padding: 1rem;
   .test-card p {
     
     font-size: 1.3rem;
-
+    font-weight: 400;
+    font-family: 'Lato', sans-serif;
   }
 
   .test-card{
@@ -1469,17 +1544,23 @@ padding: 1rem;
 
   .odd {
     text-align: left;
-    gap: 2rem;
+    gap: 0.875rem;
   }
 
   .btn3 {
     max-width: 100%;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+  }
+  .btn3:hover{
+    background-color: #FFCC4A;
+    color: white;
   }
 }
 
 @media (max-width: 1024px) {
   .timeline ol {
-    padding: 200px 0; /* Adjusted padding for smaller screens */
+    padding: 233px 0; /* Adjusted padding for smaller screens */
   }
 
   .timeline ol li {
@@ -1491,8 +1572,8 @@ padding: 1rem;
 
 
 @media (max-width: 768px) {
-  timeline ol {
-    padding: 30px 0; /* Adjusted padding for smaller screens */
+  .timeline ol {
+    padding: 230px 0; /* Adjusted padding for smaller screens */
   }
 
   .timeline ol li {
@@ -1558,7 +1639,7 @@ padding: 1rem;
 
   .title{
     line-height: normal;
-    
+    font-size:3.125rem;
   }
 
   .carousel-inner {
@@ -1814,9 +1895,8 @@ padding: 1rem;
   .primary-header .primary-navigation li a {
     color: #000;
     background-color: white;
-    padding: 0.625rem 2.5rem;
-    font-size:1.7rem;
-
+    padding: 0.625rem 1.5rem;
+    font-size:1.3rem;
   }
   .destinations:hover{
      background-color: #4EAF4E;
@@ -1849,7 +1929,7 @@ padding: 1rem;
     padding: 0.75rem;
     border: 2.5px solid #7FBA3A;
     border-radius: 0.75rem;
-    margin-left: 5.5rem;
+    margin-left: 3.5rem;
     background-color: #fff;
     font-size: 1.1rem;
   }
@@ -1877,8 +1957,8 @@ padding: 1rem;
   .dropdown:hover .dropdown-content {
     display: block;
     justify-content: center;
+    margin-top: 2rem;
   }
-  
   /* Base styles for the hamburger icon */
   .primary-header .mobile-nav-toggle {
     padding: 0;
@@ -2134,6 +2214,8 @@ color: white;}
     padding: 0.5rem 0; 
     mix-blend-mode: screen; 
     font-size: 2.5rem;
+    font-family: 'Cabin', sans-serif;
+    font-weight:bold;
   }
   
   
@@ -2200,8 +2282,8 @@ color: white;}
   .overseas{
     display:inline-flex;
     flex-direction:column;
-    gap:1em;
-    margin-top: 7rem;
+    gap:0.6rem;
+    margin-top: 10rem;
     width:58vw;
     font-family: "Poppins", sans-serif;
     
@@ -2219,7 +2301,7 @@ color: white;}
     width: 100%;
   height: auto;
   position: relative;
-  bottom: 8rem;
+  bottom: 10rem;
   }
   .title1{
  
@@ -2230,12 +2312,13 @@ color: white;}
   }
   .matter1{
   
-    font-size:1.95rem;
-    color:black;
-    font-weight: 400;
-    line-height: 1.6;
-    text-transform:none;
-    width: 70%;
+    font-size:1.55rem;
+  color:black;
+  font-weight: 500;
+  font-family: 'Avenir', sans-serif;
+  line-height: 1.6;
+  text-transform:none;
+  width: 70%;
   }
   .btn1{
     display:flex;
@@ -2251,10 +2334,9 @@ color: white;}
   border:none;
   }
   .btn1:hover{
-    color:#7FBA3A;
-    background-color: white;
-    border: 2px solid #7FBA3A;
-  }
+      color:white;
+      background-color: #FFCC4A;
+    }
   .universities {
     position: relative;
     display: flex;
@@ -2262,7 +2344,9 @@ color: white;}
     white-space: nowrap;
     padding: 1em 0;
     margin-top: 0.6rem;
-    background-color:white;
+    background-color: white;
+    height: 10.5rem;
+    top: -3rem;
   }
   
   .universities img {
@@ -2289,7 +2373,7 @@ color: white;}
   .ABOUT{
     display:inline-flex;
       flex-direction:column;
-      gap:3rem;
+      gap:1.5rem;
       position:relative; 
       width:60vw;
       height:auto;
@@ -2313,15 +2397,16 @@ color: white;}
   .matter2{
     font-size:2.25rem;
     color:#595566;
-    font-weight: 300;
+    font-weight: 400;
     line-height:3rem;
     text-transform:none;
+    font-family:'Lato',sans-serif;
     width:90%;
     height:auto;
     position: relative;
     left: 6rem;
     bottom: 2rem;
-    text-align: center;
+    text-align: left;
   }
   .btn2{
     display:flex;
@@ -2330,9 +2415,10 @@ color: white;}
     border-radius: 15px;
     padding: 1rem;
     display: inline-block;
+    font-family:'Poppins,sans-serif' ;
+    font-weight: 500;
     max-width:30%;
   font-size: 20px;
-  font-weight: 400;
   justify-content:center;
   align-items: center;
   border:none;
@@ -2341,9 +2427,8 @@ color: white;}
   bottom: 3rem;
   }
   .btn2:hover{
-    color:#7FBA3A;
-    background-color: white;
-    border: 2px solid #7FBA3A;
+    color:white;
+    background-color: #FFCC4A;
   }
   .AU{
     position:relative;
@@ -2356,7 +2441,7 @@ color: white;}
     width: 100vw;
     height: auto;
     font-family: "Poppins", sans-serif;
-    padding: 1vh 11vw;
+    padding: 7vh 11vw;
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -2404,6 +2489,8 @@ color: white;}
     padding: 0.5rem 0; 
     mix-blend-mode: screen; 
     font-size: 2.5rem;
+    font-family: 'Cabin', sans-serif;
+    font-weight:bold;
   }
   
   
@@ -2425,7 +2512,9 @@ color: white;}
     gap: 3rem;
     padding-bottom: 20vh;
   }
-  
+  .col-md-4 a:hover{
+    text-decoration: none;
+  }
   .test-card {
     width: 300px; 
     min-height: 250px; 
@@ -2457,6 +2546,7 @@ color: white;}
     color: #595959;
     font-size: 1.12rem;
     font-weight: 400;
+    font-family: 'Lato', sans-serif;
   }
   
   .test-card img {
@@ -2473,7 +2563,48 @@ color: white;}
   
     left: 0rem;
 }
-
+.btn3{
+  display:flex;
+  background-color:#4EAF4E;
+  color:white;
+  border-radius: 15px;
+  padding: 1rem;
+  display: inline-block;
+max-width:50%;
+font-size: 1.5rem;
+font-weight: 500;
+justify-content:center;
+align-items: center;
+border:none;
+margin-top: 1rem;
+font-family:'Poppins',sans-serif ;
+}
+.btn3:hover{
+  background-color: #FFCC4A;
+  color: white;
+}
+}
+@media (min-width:1201px) and (max-width:1270px){
+  .btn3{
+    display:flex;
+    background-color:#4EAF4E;
+    color:white;
+    border-radius: 15px;
+    padding: 1rem;
+    display: inline-block;
+  max-width:50%;
+  font-size: 1.5rem;
+  font-weight: 500;
+  justify-content:center;
+  align-items: center;
+  border:none;
+  margin-top: 1rem;
+  font-family:'Poppins',sans-serif ;
+  }
+  .btn3:hover{
+    background-color: #FFCC4A;
+    color: white;
+  }
 }
 
 @media (min-width:770px) and (max-width:1400px){
@@ -2600,7 +2731,7 @@ color: white;}
     width: 100vw;
     height: auto;
     font-family: "Poppins", sans-serif;
-    padding: 1vh 11vw;
+    padding: 7vh 5vw;
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -2611,6 +2742,7 @@ color: white;}
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: stretch; 
+    padding-left: 6rem;
   
   }
   
@@ -2649,10 +2781,15 @@ color: white;}
     padding: 0.5rem 0; 
     mix-blend-mode: screen; 
     font-size: 2.5rem;
+    font-family: 'Cabin', sans-serif;
+    font-weight:bold;
   }
   
   
   .card-row .col-md-4 .card1:last-child {
     margin-bottom: 0;
   }
+}
+@media (min-width:1025px) and (max-width:1210px){
+
 }
