--- a/Ourservices.css
+++ b/Ourservices.css
@@ -438,7 +438,7 @@ color: white;}
   height: auto; /* Maintain the aspect ratio */
   max-width: 944px; /* Set a maximum width for larger screens */
   position: relative;
-  top: 1rem;
+  top: 0.9rem;
 }
 
 .container2 {
@@ -450,6 +450,7 @@ color: white;}
   flex-direction: column;
   position: relative;
   padding-top: 4vh;
+  margin-top:0.5rem;
 }
 
 .container2 h2 {
@@ -518,14 +519,14 @@ color: white;}
   display:inline-flex;
   align-items: center;
   font-family: "Poppins", sans-serif;
-  padding: 1vh 4vw;
+  padding: 6vh 4vw;
   justify-content: center;
 
 }
 .MISSION{
   display:inline-flex;
     flex-direction:column;
-    gap:1.5rem;
+    gap:0.875rem;
     position:relative; 
     width:50vw;
     height:auto;
@@ -535,14 +536,15 @@ color: white;}
   font-weight: 600;
   color: #000;
   line-height: 7rem;
+  margin-bottom:0rem;
 }
 .matter3{
   color: #595566;
   font-family: "Lato", sans-serif;
   font-size:2rem;
   font-weight: 400;
-  line-height: 147.5%;
-  width: 90%;
+  line-height: 150.5%;
+  width: 95%;
   float: left; /* Ensures padding is included in the total width */
   box-sizing: border-box; 
 }
@@ -571,12 +573,13 @@ color: white;}
     width: 100%; 
     text-align: center; 
     padding: 0;
-    gap: 0;
+    gap: 0.875rem;
 }
 
   
   .title {
       font-size: 1.5em;  
+      margin-bottom: 0rem;
   }
 
 
@@ -605,7 +608,7 @@ color: white;}
   display:inline-flex;
   align-items: center;
   font-family: "Poppins", sans-serif;
-  padding: 1vh 4vw;
+  padding: 1vh 6.5vw;
   justify-content: center;
 }
 
@@ -623,7 +626,7 @@ color: white;}
   width: 100%; 
   text-align: left; 
   padding-left: 10rem;
-  gap: 0;
+  gap: 0.875rem;
 
 }
 
@@ -645,7 +648,7 @@ color: white;}
     width: 100%; 
     text-align: center; 
     padding: 0;
-    gap: 0;
+    gap: 0.875rem;
 }
   
   .SUB {
@@ -663,6 +666,7 @@ color: white;}
   list-style: none;
   padding: 0;
   margin: 0;
+  gap:
 }
 
 .list1 li {
@@ -671,6 +675,7 @@ color: white;}
   align-items: center;
   margin-bottom: 20px;
   flex-direction: row;
+  margin-bottom: 1.1875rem;
 }
 
 .tick {
@@ -688,6 +693,8 @@ color: white;}
   line-height: 150%;
   width: 85%;
   align-items: center;
+  position: relative;
+  bottom:0.4rem;
 }
 
 /* Adjust the spacing based on your design */
